--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+huayra-visor-manual (1.4.0) unstable; urgency=medium
+
+  * Agregado control de zoom
+  * Ahora la aplicación se puede llamar huayra-visor-manual <Título de la página>
+  * Ahora el dump de la wiki tiene menos boilerplate alrededor
+
+ -- Ignacio Losiggio <iglosiggio@gmail.com>  Wed, 20 Jul 2016 09:33:18 -0300
+
 huayra-visor-manual (1.3.2) unstable; urgency=low
 
   * update.
