--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-visor-manual (1.4.1) unstable; urgency=medium
+
+  * Bugfix en llamar la aplicación desde Primeros pasos y otras aplicaciones
+  * Letras un poco más grandes
+
+ -- Ignacio Losiggio <iglosiggio@gmail.com>  Wed, 20 Jul 2016 13:11:41 -0300
+
 huayra-visor-manual (1.4.0) unstable; urgency=medium
 
   * Agregado control de zoom
