--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+huayra-visor-manual (1.5.0) unstable; urgency=medium
+
+  * Incluye arreglo menor sobre links rotos.
+
+ -- Hugo Ruscitti <hugoruscitti@gmail.com>  Thu, 04 Aug 2016 11:27:21 -0300
+
+
 huayra-visor-manual (1.4.5) unstable; urgency=medium
 
   * Actualizando a la versión 1.4.5.
