--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,4 @@
+node_modules/nwjs-hack/* usr/share/huayra-visor-manual/node_modules/nwjs-hack
 src/* usr/share/huayra-visor-manual/src
 bin/huayra-visor-manual usr/bin/
 debian/huayra-visor-manual.desktop usr/share/applications
